--- a/terminalUSB/terminalUSB/Views/windows/MainWindow.xaml
+++ b/terminalUSB/terminalUSB/Views/windows/MainWindow.xaml
@@ -4,16 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm ="clr-namespace:terminalUSB.ViewModels"
+        xmlns:cmd ="clr-namespace:terminalUSB.Infafstructure.Commands"
         xmlns:local="clr-namespace:terminalUSB"
         Title="{Binding Title}"
         Height="450" Width="800">
     <Window.DataContext>
         <vm:MainWindowViewModel/>
     </Window.DataContext>
+    <Window.Resources>
+        <cmd:CloseApplicationCommand x:Key="CloseApplicationCommand"/>
+    </Window.Resources>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Меню">
-                <MenuItem Header="Вихід" Command="{Binding ClaseApplicationCommand}"/>
+                <MenuItem Header="Вихід" Command="{StaticResource CloseApplicationCommand}"/>
             </MenuItem>
             <MenuItem Header="Про програму">
             </MenuItem>
