--- a/terminalUSB/terminalUSB/App.xaml
+++ b/terminalUSB/terminalUSB/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:terminalUSB"
-             StartupUri="Views/Windows/MainWindow.xaml">
+             StartupUri="Views/Windows/MainWindow.xaml"
+             xmlns:fa5="http://schemas.fontawesome.com/icons/">
     <Application.Resources>
          
     </Application.Resources>
