додано модель та представлення для графіка

--- a/terminalUSB/terminalUSB/Views/windows/MainWindow.xaml
+++ b/terminalUSB/terminalUSB/Views/windows/MainWindow.xaml
@@ -58,7 +58,10 @@
                 </Grid>
 
             </TabItem>
-            <TabItem Header="Графік"></TabItem>
+            <TabItem Header="Графік">
+                
+                
+            </TabItem>
         </TabControl>
     </DockPanel>
     
